license = "MIT"
license-files = [
    "LICENSE",
]

[build-system]
requires = [
    "setuptools==80.9.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "docassemble.DALVolunteerSignup"
version = "1.0.5"
description = "A volunteer signup form for the Document Assembly Line."
readme = "README.md"
authors = [
    { name = "Suffolk LIT Lab", email = "litlab@suffolk.edu" },
]
dependencies = [
    "docassemble.AssemblyLine @ git+https://github.com/SuffolkLITLab/docassemble-AssemblyLine.git@main",
]

[project.urls]
Homepage = "https://assemblyline.suffolklitlab.org/volunteer"

[tool.setuptools.packages.find]
where = [
    ".",
]
